<resources>
    <string name="url">https://wzctest.wzc520pyf.cn/chinatalk</string>
    <string name="menu_home">HOME</string>
    <string name="menu_exam">EXAM</string>
    <string name="menu_game">GAME</string>
    <string name="menu_my">MY</string>
    <string name="sign_out">Sign out</string>
    <string name="delete">Delete</string>
    <string name="wrong_book">Wrong question book</string>
    <string name="front_ques">Previous question</string>
    <string name="next_ques">next question</string>
    <string name="edit_info">Editing information</string>
    <string name="name">Name</string>
    <string name="example_name">Jean Pena</string>
    <string name="sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="please_select_data">Please select a date</string>
    <string name="confirm">Confirm</string>
    <string name="school_example">Zhejiang Institute of Technology</string>
    <string-array name="school">
        <item>Zhejiang Institute of Technology</item>
    </string-array>
    <string name="profession_example">Digital Media Major</string>
    <string-array name="profession">
        <item>Digital Media Major</item>
    </string-array>
    <string name="notice">#NOTICE#</string>
    <string name="view_more">View more</string>
    <string name="leading_record">Learning record</string>
    <string name="HSK4">Chinese level 4</string>
    <string name="exam_record">Examination record</string>
    <string name="residual_learning">Residual learning</string>
    <string name="remaining_days">Remaining days</string>
    <string name="task_today">Task today</string>
    <string name="completed">Completed</string>
    <string name="remaining">Remaining</string>
    <string name="error">Error</string>
    <string name="test_time">testing time</string>
    <string name="score">Minute</string>
    <string name="ques">question</string>
    <string name="all_ques_num">Total number of questions</string>
    <string name="wrong_num">Number of wrong questions</string>
    <string name="re_test">Test again</string>
    <string name="login_desc">Carrying your Chinese dream</string>
    <string name="user_name">Username</string>
    <string name="user_name_hint">please enter your username</string>
    <string name="login_info">please enter your email/mobile number</string>
    <string name="password">Password</string>
    <string name="password_info">please enter your email/mobile number</string>
    <string name="register">No account yet? Go to register</string>
    <string name="re_psd">reSetPassword</string>
    <string name="sign">Sign in</string>
    <string name="reg_new_user">New user registration</string>
    <string name="phone">Mobile Number</string>
    <string name="phone_hint">please enter your mobile number</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_hint">please enter your email</string>
    <string name="ver_code">Verfication Code</string>
    <string name="ver_code_hint">please enter your veification code</string>
    <string name="send">Send</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_hint">please enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="con_pass_hint">please enter your password again</string>
    <string name="btn_register">Register</string>
    <string name="time_left">time left</string>
    <string name="random_test">Random test</string>
    <string name="left_ques">Remaining</string>
    <string name="exam">Exam</string>
    <string name="recom_practice">Recommended practice</string>
    <string name="used_time">time consuming</string>
    <string name="wrongs">error</string>
    <string name="back_home">Back to homepage</string>
    <string name="see_wrong_ques">Check wrong questions</string>
    <string name="edit">Edit</string>
    <string name="per_center">Personal Center</string>
    <string name="login_out">Logout</string>
    <string name="what_is_your_answer">What is your answer...</string>
    <string name="see_and_dis_things">Look at the picture and know things</string>
    <string name="game">Game</string>
    <string name="third_pass">Third pass</string>
    <string name="tips">Warm reminder: You can click on the voice input on the right side of the description, the recorded voice will be converted into text in real time, and you can choose to delete or re-record</string>
    <string name="answer_hint">Please enter your answer</string>
    <string name="yes">determine</string>
    <string name="answer_wrong">The answer is wrong, please try again!!</string>
    <string name="please_speak">Please voice input</string>
    <string name="speak">Voice input</string>
    <string name="up_and_over">Release the end</string>
    <string name="answer_right">correct answer!!</string>
    <string name="wrong_from">Source of wrong question</string>
    <string name="overed">completed</string>
    <string name="restart">Restart</string>
    <string name="test_continue">Continue testing</string>
    <string name="topest">highest</string>
    <string name="test_start">start testing</string>
    <string name="app_name">ChinaTalk</string>
    <string name="app_id">d213d266</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">
        科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…
    </string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.
    </string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="voicer_xtts_entries">
        <item>小燕</item>
        <item>小峰</item>
    </string-array>
    <string-array name="voicer_xtts_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
    </string-array>
    <string name="introduction">Introduction</string>
    <string name="news">News</string>
    <string name="policy">Policy</string>
    <string name="introduction_1">The Confucius Institute is an organization set up by the Office
        of China National Chinese International Promotion Leading Group to promote Chinese and
        disseminate Chinese culture around the world. </string>
    <string name="introduction_2">The most important task of Confucius Institutes is to provide
        standard and authoritative modern Chinese textbooks for Chinese learners all over the world,
        and to provide the most formal and main channel of Chinese teaching. The first Confucius
        Institute in the world was formally established in Seoul, South Korea in 2004.
        In May 2012, the United States censored the academic qualifications of Confucius Institutes
        and asked some teachers to leave the country, which triggered a heated debate.</string>
    <string name="confucius_institute">Confucius Institute</string>
    <string name="introduction_3">China has established 511 Confucius Institutes and 1073 Confucius classrooms in 140 countries and regions. There are 2.1 million registered students and 46,000 full-time and part-time teachers at home and abroad.</string>
    <string name="new_1">In September, Suva, the capital of island country Fiji in the South Pacific, is still full of green coconut…</string>
    <string name="new_title_1">A Special Lecture on Chinese Culture</string>
    <string name="new_title_2">Delegation from Confucius Institute at Hokuriku University Visits Confucius…</string>
    <string name="new_2">On the morning of August 28th, Heiseikenchushi, a delegation of the Confucius Institute at Hokuriku…</string>
    <string name="confucius_institute_headquarters">Confucius Institute Headquarters</string>
    <string name="_2018_08_31">2018-08-31</string>
    <string name="xinhuanet_com_2018_09_21">xinhuanet.com\n2018-09-21</string>
    <string name="news_detail_2">Red lanterns and eye-catching Chinese knots were hung high on both sides of the room. The special lecture of Chinese tea art begun under the accompaniment of the fresh and beautiful Chinese folk music. The trained tea artist of the Confucius Institute, wearing traditional Chinese cheongsam, systematically and vividly explained the types, distribution, production process of Chinese tea by PPT, and demonstrated how to make tea and taste it. She invited Fijian employees to come on the stage to have a closer look of the tea making. The tea artist also patiently answered the questions asked by Fijian employees to make sure she was understood.</string>
    <string name="news_detail_1">In September, Suva, the capital of island country Fiji in the South Pacific, is still full of green coconut trees and stroke by the gentle sea breeze. As the traditional Mid-Autumn Festival approaches, the central city of the South Pacific is bustling with activity. On the 14th, China Railway First Group Co., Ltd., Fiji’s largest Chinese-funded company, together with the Confucius Institute at the University of the South Pacific hosted a special lecture on Chinese culture--tea tasting for more than 40 Fijian and Chinese representatives from the company headquarters and various projects. The lecture was warmly welcomed by the representatives.</string>
    <string name="news_detail_3">The Fijian employees were captivated by the tea artist’s spectacular explanation and tea making demonstration. After the activity, they admired the long history and profoundness of the Chinese tea culture even more which they acclaimed as an art of living, a self-cultivating lifestyle and life etiquette.</string>
</resources>