<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/confucius_institute"
                android:textColor="#AB162A"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/px_20"
                android:textColor="#666666"
                android:text="@string/introduction_1"
                android:textScaleX="1.05"
                android:textSize="@dimen/sp_14" />
            <ImageView
                android:layout_marginTop="12dp"
                android:src="@mipmap/pic_home_intro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="@dimen/px_20"
                android:text="@string/introduction_2"
                android:textColor="#666666"
                android:textScaleX="1.05"
                android:textSize="@dimen/sp_14" />
            <ImageView
                android:layout_marginTop="12dp"
                android:src="@mipmap/pic_home_intro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="@dimen/px_20"
                android:textColor="#666666"
                android:textScaleX="1.05"
                android:textSize="@dimen/sp_14"
                android:text="@string/introduction_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>