<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".androidapp.NewsDetailActivity">

    <include layout="@layout/head_news" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:lineSpacingExtra="@dimen/px_22"
                android:text="@string/new_title_1"
                android:textColor="#333333"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="@dimen/px_24"
                android:text="@string/xinhuanet_com_2018_09_21"
                android:textColor="#999999"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="11dp"
                android:background="#D0D0D0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@mipmap/pic_news_new1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:lineSpacingExtra="@dimen/px_20"
                android:text="@string/news_detail_1"
                android:textColor="#666666"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:src="@mipmap/pic_home_new2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:lineSpacingExtra="@dimen/px_20"
                android:text="@string/news_detail_2"
                android:textColor="#666666"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:src="@mipmap/pic_news_new3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:lineSpacingExtra="@dimen/px_20"
                android:text="@string/news_detail_3"
                android:textColor="#666666"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>