<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_introduction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/introduction"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/item_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/news"
            android:textColor="#666666"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/item_policy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/policy"
            android:textSize="@dimen/sp_14"
            android:textColor="#666666"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>